fixed blue boxes behind trainers had too much text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,7 +180,6 @@ footer a {
     border-bottom: 3px solid;
   }
   
-
   .primary-border {
     border-color: #fce138;
   }
@@ -263,16 +262,6 @@ footer a {
   .text-right {
     text-align: right;
   }
-
-  .section-title {
-    font-size: 55px;
-    display: inline-block;
-    padding: 0 100px 20px 100px;
-    border-bottom: 3px solid;
-    margin-bottom: 35px;
-    color: #024e76;
-  }
-
  
   /* REACH OUT STYLES START */
 .contact {
